package be.isims.ihm.dp.tp4.ex5.code;

//VUE
public interface Observer {
    void update(String value);
}
