@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp4.ex5.code {
    abstract class be.isims.ihm.dp.tp4.ex5.code.AbstractController {
        + AbstractController()
        {abstract} + notification()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex5.code {
    abstract class be.isims.ihm.dp.tp4.ex5.code.AbstractObservable {
        + setObserver()
        {abstract} + toHex()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex5.code {
    class be.isims.ihm.dp.tp4.ex5.code.ColorModel {
        - hb : String
        - hg : String
        - hr : String
        + toHex()
        - correction()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex5.code {
    class be.isims.ihm.dp.tp4.ex5.code.Controller {
        + Controller()
        + notification()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex5.code {
    class be.isims.ihm.dp.tp4.ex5.code.Main {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex5.code {
    interface be.isims.ihm.dp.tp4.ex5.code.Observer {
        {abstract} + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex5.code {
    class be.isims.ihm.dp.tp4.ex5.code.ViewFrm {
        - dec : int[]
        - hexa : JLabel
        - lines : JPanel[]
        - sliders : JSlider[]
        - spinners : JSpinner[]
        + ViewFrm()
        + initUI()
        + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex5.code {
    class be.isims.ihm.dp.tp4.ex5.code.ViewFrm.Listener {
        + stateChanged()
    }
  }
  

  be.isims.ihm.dp.tp4.ex5.code.AbstractController o-- be.isims.ihm.dp.tp4.ex5.code.AbstractObservable : observable
  be.isims.ihm.dp.tp4.ex5.code.AbstractObservable o-- be.isims.ihm.dp.tp4.ex5.code.Observer : observer
  be.isims.ihm.dp.tp4.ex5.code.ColorModel -up-|> be.isims.ihm.dp.tp4.ex5.code.AbstractObservable
  be.isims.ihm.dp.tp4.ex5.code.Controller -up-|> be.isims.ihm.dp.tp4.ex5.code.AbstractController
  be.isims.ihm.dp.tp4.ex5.code.ViewFrm .up.|> be.isims.ihm.dp.tp4.ex5.code.Observer
  be.isims.ihm.dp.tp4.ex5.code.ViewFrm -up-|> javax.swing.JFrame
  be.isims.ihm.dp.tp4.ex5.code.ViewFrm o-- be.isims.ihm.dp.tp4.ex5.code.AbstractController : controller
  be.isims.ihm.dp.tp4.ex5.code.ViewFrm +-down- be.isims.ihm.dp.tp4.ex5.code.ViewFrm.Listener
  be.isims.ihm.dp.tp4.ex5.code.ViewFrm.Listener .up.|> javax.swing.event.ChangeListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
